- fixed sticky footer issue on iphones

--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -3,6 +3,7 @@
  */
 html, body {
     min-height: 100%;
+    min-width: 1280px;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -118,13 +119,14 @@ aside {
 }
 
 #flex-aside-one:hover,
-#flex-aside-one:focus {
+#flex-aside-one:focus,
+#flex-aside-one:active {
     max-width: 640px;
 }
 
 #flex-main-content {
     min-height: 320px;
-    min-width: 600px;
+    min-width: 640px;
     flex: 1;
     box-orient: vertical;
     box-ordinal-group: 2;
